--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  fl_toast: ^3.1.0
+  http: ^0.13.5
+  shared_preferences: ^2.0.17
   # flutter_dropdown: ^1.0.1+hotfix.1
 
 dev_dependencies:
