--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.17
   fluttertoast: ^8.2.1
+  shimmer: ^2.0.0
   # flutter_dropdown: ^1.0.1+hotfix.1
 
 dev_dependencies:
