--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.17
   fluttertoast: ^8.2.1
   shimmer: ^2.0.0
+  rxdart: ^0.27.7
   # flutter_dropdown: ^1.0.1+hotfix.1
 
 dev_dependencies:
